--- a/k8s/apirule.yaml
+++ b/k8s/apirule.yaml
@@ -2,6 +2,9 @@ apiVersion: gateway.kyma-project.io/v1alpha1
 kind: APIRule
 metadata:
   name: cap-service
+  namespace: testcap
+  labels:
+    app: cap-service
 spec:
   gateway: kyma-gateway.kyma-system.svc.cluster.local
   rules:
