--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: cap-service  
     spec:     # pod spec                  
       containers: 
-      - image: jcawley5/cap-service:latest # image we pushed
+      - image: wiking/cap-test:latest # jcawley5/cap-service:latest # image we pushed
         name: cap-service  
         imagePullPolicy: Always
         ports:
@@ -26,12 +26,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cap-service 
+  namespace: testcap
   labels:
     app: cap-service
 spec:
+  type: ClusterIP
   ports:
   - name: http
     port: 4004
+    protocol: TCP
     targetPort: 4004
   selector:
     app: cap-service 
